UI-3233: [PLF] Alignment Bugs on some screens

--- a/platform-ui-web-eXoResources/src/main/webapp/skin/less/Form/Style.less
+++ b/platform-ui-web-eXoResources/src/main/webapp/skin/less/Form/Style.less
@@ -74,12 +74,11 @@ input[type="color"],
 		margin-bottom: 8px;
 		.control-label {
 			margin: 0;
-			padding-top: 4px;
 		}
 		.controls{
 			line-height: 28px;
 			.uiCheckbox{
-		    margin: 3px 0 0;
+		    margin: 5px 0 0;
 		  }
 		  .uiRadio{
 	      margin: 3px 25px 0px 0;
@@ -281,6 +280,7 @@ input[disabled], select[disabled], textarea[disabled] {
 	height: 26px;
 	line-height: 18px;	
 	outline: none;
+	padding: 4px 6px;
 }
 
 .selectboxMini  {
