--- a/platform-ui-web-eXoResources/src/main/webapp/skin/less/Pagination/Style.less
+++ b/platform-ui-web-eXoResources/src/main/webapp/skin/less/Pagination/Style.less
@@ -16,7 +16,7 @@
 }
 
 .uiPageIterator label {
-	line-height: 27px;
+	line-height: 26px;
 }
 
 .uiPageIterator ul > li > a,
